--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,7 +60,7 @@
         android:ems="10"
         android:fontFamily="@font/kurale"
         android:hint="Username"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:paddingStart="18dp"
         android:textColorHint="#777777"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
