--- a/app/src/main/res/layout/activity_all_notes.xml
+++ b/app/src/main/res/layout/activity_all_notes.xml
@@ -11,10 +11,10 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/kurale"
         android:text="Your Notes"
         android:textColor="@color/black"
-        android:fontFamily="@font/kurale"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notes_recycler_view"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
